# discord-honeybot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py
.github/workflows/: ci.yml  release.yml
crates/honeybot/: Cargo.toml  Dockerfile
crates/honeybot-proto/: Cargo.toml
crates/honeybot-proto/src/: lib.rs
crates/honeybot-registry/: Cargo.toml  Dockerfile
crates/honeybot-registry/migrations/: 0001_init.sql
crates/honeybot-registry/src/: auth.rs  config.rs  db.rs  fanout.rs  main.rs  reputation.rs
crates/honeybot-registry/src/api/: auth.rs  bans.rs  mod.rs  pools.rs  stream.rs
crates/honeybot/i18n/: en.ftl  fr.ftl
crates/honeybot/migrations/: 0001_init.sql
crates/honeybot/src/: actions.rs  bot.rs  config.rs  db.rs  domain.rs  i18n.rs  main.rs
crates/honeybot/src/commands/: honeypot.rs  mod.rs  pool.rs  setup.rs  util.rs  warn.rs
crates/honeybot/src/federation/: client.rs  stream.rs
crates/honeybot/src/handlers/: federation.rs  honeypot.rs  mod.rs
docs/: federation.md  self-host-registry.md  setup-bot.md
scripts/: init.sh  load-env-and-run.sh
