[workspace]
resolver = "3"
members = [
    "crates/honeybot",
    "crates/honeybot-registry",
    "crates/honeybot-proto",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Kenshin9977/discord-honeybot"
authors = ["Kenshin9977"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Discord (twilight, modular)
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-cache-inmemory = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }

# Web (registry only)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate"] }

# HTTP client (federation)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Crypto / auth
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Internal crates
honeybot-proto = { path = "crates/honeybot-proto" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
