[workspace]
resolver = "3"
members = ["crates/honeybot"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Kenshin9977/discord-honeybot"
authors = ["Kenshin9977"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Discord (twilight, modular)
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-cache-inmemory = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
figment = { version = "0.10", features = ["env", "toml"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Misc
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
