[package]
name = "honeybot-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Federation registry: pools, ban-event ingestion, SSE fanout."

[[bin]]
name = "honeybot-registry"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
honeybot-proto.workspace = true
