[package]
name = "honeybot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Discord bot: honeypot channels and warns/strikes with auto-escalation."

[[bin]]
name = "honeybot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-cache-inmemory.workspace = true
twilight-util.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid.workspace = true
chrono.workspace = true
